fixed weird spacing issue

--- a/src/styles/components/TextEditor.styl
+++ b/src/styles/components/TextEditor.styl
@@ -50,7 +50,7 @@
     boxShadow()
     z-index: 2
     transition: opacity 300ms $expo
-    top: pxToRem(9999);
+    left: pxToRem(9999);
 
     +above($break-md)
       display: inline-block;
